--- a/GPSTest/app/src/main/res/layout/button.xml
+++ b/GPSTest/app/src/main/res/layout/button.xml
@@ -56,6 +56,7 @@
         />
     <TextView android:id="@+id/latTv"
         android:text="0.00"
+        android:layout_width="170dp"
         android:textSize="20sp"
         android:layout_margin="10dp"
         android:textStyle="bold"
@@ -65,19 +66,22 @@
     <TextView android:id="@+id/longTv"
         android:text="0.00"
         android:textSize="20sp"
+        android:layout_width="170dp"
         android:layout_margin="10dp"
         android:textStyle="bold"
         android:layout_row="1"
         android:layout_column="2"
         />
-    <TextView android:id="@+id/ttffTv"
-        android:text="0.00"
-        android:textSize="20sp"
-        android:layout_margin="10dp"
-        android:textStyle="bold"
+
+    <TextView
+        android:id="@+id/ttffTv"
+        android:layout_width="170dp"
         android:layout_row="2"
         android:layout_column="2"
-        />
+        android:layout_margin="10dp"
+        android:text="0.00"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 
 
