--- a/GPSTest/app/src/main/res/layout/output2.xml
+++ b/GPSTest/app/src/main/res/layout/output2.xml
@@ -15,36 +15,43 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="ID"
+                android:textColor="#1F7122"
                 android:textStyle="bold"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="GNSS"
+                android:textColor="#1F7122"
                 android:textStyle="bold"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="CF"
+                android:textColor="#1F7122"
                 android:textStyle="bold"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="C/No"
+                android:textColor="#1F7122"
                 android:textStyle="bold"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Flags"
+                android:textColor="#1F7122"
                 android:textStyle="bold"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Elev"
+                android:textColor="#1F7122"
                 android:textStyle="bold"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Azim"
+                android:textColor="#1F7122"
                 android:textStyle="bold"/>
         </TableRow>
 
