--- a/GPSTest/app/src/main/res/layout/output1.xml
+++ b/GPSTest/app/src/main/res/layout/output1.xml
@@ -14,7 +14,7 @@
     <TextView
         android:text="Alt:"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textColor="@color/black"
         android:layout_column="0"
         android:layout_row="0"
@@ -24,6 +24,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="0.00"
+        android:textColor="#1F7122"
         android:textStyle="bold"
         android:layout_row="0"
         android:layout_column="1"
@@ -34,7 +35,7 @@
         android:text="E H/V Acc:"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:layout_column="2"
         android:layout_row="0"
        />
@@ -42,6 +43,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="0.00"
+        android:textColor="#1F7122"
         android:textStyle="bold"
         android:layout_row="0"
         android:layout_column="3"
@@ -51,7 +53,7 @@
     <TextView
         android:text="Alt (MSL):"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textColor="@color/black"
         android:layout_column="0"
         android:layout_row="1"
@@ -61,6 +63,7 @@
         android:textStyle="bold"
         android:layout_height="wrap_content"
         android:text="0.00"
+        android:textColor="#1F7122"
         android:layout_row="1"
         android:layout_column="1"
 
@@ -69,7 +72,7 @@
     <TextView
         android:text="#Sats:"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textColor="@color/black"
         android:layout_column="2"
         android:layout_row="1"
@@ -79,6 +82,7 @@
         android:textStyle="bold"
         android:layout_height="wrap_content"
         android:text="0/0/0"
+        android:textColor="#1F7122"
         android:layout_row="1"
         android:layout_column="3"
 
@@ -88,7 +92,7 @@
         android:text="Speed:"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:layout_column="0"
         android:layout_row="2"
     />
@@ -96,6 +100,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="0.00"
+        android:textColor="#1F7122"
         android:layout_row="2"
         android:textStyle="bold"
         android:layout_column="1"
@@ -106,7 +111,7 @@
         android:text="Bearing:"
         android:textColor="@color/black"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:layout_column="2"
         android:layout_row="2"
        />
@@ -114,6 +119,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="0.00"
+        android:textColor="#1F7122"
         android:textStyle="bold"
         android:layout_row="2"
         android:layout_column="3"
@@ -123,7 +129,7 @@
         android:text="S.Acc:"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:layout_column="0"
         android:layout_row="3"
   />
@@ -131,6 +137,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="0.00"
+        android:textColor="#1F7122"
         android:textStyle="bold"
         android:layout_row="3"
         android:layout_column="1"
@@ -140,7 +147,7 @@
     <TextView
         android:text="B.Acc:"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textColor="@color/black"
         android:layout_column="2"
         android:layout_row="3"
@@ -151,6 +158,7 @@
         android:textStyle="bold"
         android:layout_height="wrap_content"
         android:text="0.00"
+        android:textColor="#1F7122"
         android:layout_row="3"
         android:layout_column="3"
 
@@ -159,7 +167,7 @@
     <TextView
         android:text="PDOP:"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textColor="@color/black"
         android:layout_column="0"
         android:layout_row="4"
@@ -168,6 +176,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="0.00"
+        android:textColor="#1F7122"
         android:textStyle="bold"
         android:layout_row="4"
         android:layout_column="1"
@@ -178,7 +187,7 @@
         android:text="H/V DOP:"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:layout_column="2"
         android:layout_row="4"
     />
@@ -186,6 +195,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="0.00"
+        android:textColor="#1F7122"
         android:textStyle="bold"
         android:layout_row="4"
         android:layout_column="3"
