--- a/GPSTest/app/src/main/res/layout/activity_main.xml
+++ b/GPSTest/app/src/main/res/layout/activity_main.xml
@@ -11,17 +11,25 @@
         layout="@layout/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="5dp"
+        android:layout_marginHorizontal="6dp"
     />
 
     <include
         layout="@layout/output1"
         android:layout_width="match_parent"
-        android:layout_height="150dp" />
+        android:layout_height="130dp"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="6dp"
+
+        />
 
     <include
         layout="@layout/output2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="6dp"
+        android:layout_marginVertical="5dp"/>
 
 
 
