--- a/GPSTest/app/src/main/res/layout/output2.xml
+++ b/GPSTest/app/src/main/res/layout/output2.xml
@@ -2,7 +2,10 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EBF8F7"
+    android:paddingTop="15dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:background="@drawable/layout_border"
     >
     <TableLayout
         android:id="@+id/satelliteTable"
@@ -10,7 +13,8 @@
         android:layout_height="wrap_content"
         android:stretchColumns="*">
 
-        <TableRow>
+        <TableRow >
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
