--- a/GPSTest/app/src/main/res/values/themes.xml
+++ b/GPSTest/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.GPSTest" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#29672C</item>
+        <item name="colorPrimary">#0B1861</item>
         <item name="colorPrimaryVariant">#142915</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -10,7 +10,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">#142915</item>
+        <item name="android:statusBarColor">#0A0B0A</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
