--- a/GPSTest/app/src/main/res/layout/activity_main.xml
+++ b/GPSTest/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,9 @@
     <include
         layout="@layout/button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="5dp"
+        android:layout_height="247dp"
         android:layout_marginHorizontal="6dp"
-    />
+        android:layout_marginVertical="5dp" />
 
     <include
         layout="@layout/output1"
