Modify the code for reusability and add Try catch along with the log
-Created locationDataHelper.java: Created class locationDataHelper  by implementing Location Listener
-Added methods to new class: startLocationUpdates,
stopLocationUpdates,showLocationSettingsDialog.
-Calling methods on MainActivity.java

--- a/GPSTest/app/src/main/res/layout/button.xml
+++ b/GPSTest/app/src/main/res/layout/button.xml
@@ -43,13 +43,15 @@
                 android:text="Clear GPS"
                 android:textColor="@color/white" />
 
-            <Button
+            <ToggleButton
                 android:id="@+id/startTTFFButton"
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:background="#FF184C47"
-                android:text="Start TTFF"
+                android:checked="false"
+                android:textOn="Start TTFF"
+                android:textOff="Stop TTFF"
                 android:textColor="@color/white" />
 
         </LinearLayout>
